Fix user dropdown visibility & styling, move help button into it, fix collection dashboard icon margin to collection title.

--- a/app/assets/stylesheets/components/_collection_dashboard.scss
+++ b/app/assets/stylesheets/components/_collection_dashboard.scss
@@ -16,7 +16,7 @@
       @include flex(3 0 50rem);
       .title {
         font-size: 26px;
-
+        margin-bottom: 0.25rem;
         i {
           display: inline-block;
           margin-right: 0.75rem;
